--- a/css/main.scss
+++ b/css/main.scss
@@ -14,7 +14,7 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: #669900;
+$background-color: #ADD8E6;
 //$brand-color:      #2a7ae2;
 $brand-color:      #113311;
 
