--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ $spacing-unit:     30px;
 $text-color:       #111;
 $background-color: #ADD8E6;
 //$brand-color:      #2a7ae2;
-$brand-color:      #113311;
+$brand-color:      #ADD8E6;
 
 $grey-color:       #828282;
 //$grey-color:       #113311;
