--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,7 +33,7 @@
             <!-- Pregrado -->
             <div class="panel panel-primary">
               <div class="panel-heading">
-                <h3 class="panel-title">Pregrado</h3>
+                <h3 class="panel-title">Members</h3>
               </div>
                 <!--  {% for pag in site.pages %}
                     {% if pag.categories contains "posgrados" %}
@@ -55,7 +55,7 @@
             <!-- Posgrado -->
             <div class="panel panel-primary">
               <div class="panel-heading">
-                <h3 class="panel-title">Posgrado</h3>
+                <h3 class="panel-title">Activities</h3>
               </div>
               <div class="panel-body sidebar-text list-unstyled">
                 {% for page in site.pages %}
@@ -71,7 +71,7 @@
             <!-- Personal -->
             <div class="panel panel-primary">
               <div class="panel-heading">
-                <h3 class="panel-title">Personal</h3>
+                <h3 class="panel-title">Theory</h3>
               </div>
               <div class="panel-body sidebar-text list-unstyled">
                 {% for page in site.pages %}
@@ -87,7 +87,7 @@
             <!-- Cursos -->
             <div class="panel panel-primary">
               <div class="panel-heading">
-                <h3 class="panel-title">Cursos</h3>
+                <h3 class="panel-title">Experimental</h3>
               </div>
               <div class="panel-body sidebar-text list-unstyled">
                 {% for page in site.pages %}
@@ -103,7 +103,7 @@
             <!-- Servicios -->
             <div class="panel panel-primary">
               <div class="panel-heading">
-                <h3 class="panel-title">Servicios</h3>
+                <h3 class="panel-title">Services</h3>
               </div>
               <div class="panel-body sidebar-text list-unstyled">
                 {% for page in site.pages %}
