--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,8 +17,8 @@
         <ul class="nav navbar-nav">
         </ul>       
         <ul class="nav navbar-nav navbar-right left-syms">
-        <li><a href="{{ site.admision }}" ">Admisiones</a></li>
-        <li><a href="{{ site.indicador }}" >Indicadores</a></li>
+        <li><a href="{{ site.admision }}" ">About</a></li>
+        <li><a href="{{ site.indicador }}" >Blog</a></li>
         <li><a href="{{ site.contacto }}" >Contacto</a>
         </ul>
         </div>
