--- a/_sass/_custom-udea.scss
+++ b/_sass/_custom-udea.scss
@@ -1,4 +1,4 @@
-$navbar-color:     #113311;
+$navbar-color:     #B0E0E6; //#113311;
 $category-color:   #669900;
 $border-color:   $category-color;//#0079a1;
 $btn-hover-background-color: $navbar-color;
