--- a/_sass/_custom-udea.scss
+++ b/_sass/_custom-udea.scss
@@ -1,5 +1,5 @@
-$navbar-color:     #113311; //#B0E0E6;
-$category-color:   #B0E0E6; //#669900;
+$navbar-color:     #9EB8D3; //#113311; //#B0E0E6;
+$category-color:   #9EB8D3; //#B0E0E6; //#669900;
 $border-color:   $category-color;//#0079a1;
 $btn-hover-background-color: $navbar-color;
 $btn-hover-border-color: $navbar-color;
