--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
         <ul class="nav navbar-nav navbar-right left-syms">
         <li><a href="{{ site.admision }}" ">About</a></li>
         <li><a href="{{ site.indicador }}" >Blog</a></li>
-        <li><a href="{{ site.contacto }}" >Contacto</a>
+        <li><a href="{{ site.contacto }}" >Contact</a>
         </ul>
         </div>
       </div>
