--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,8 @@
       <div class="col-md-9">
         <div class="navbar-collapse collapse navbar-inverse-collapse">
         <ul class="nav navbar-nav">
-        </ul>       
+        </ul> 
+            Colombian Network of High Energy Physics
         <ul class="nav navbar-nav navbar-right left-syms">
         <li><a href="{{ site.admision }}" ">About</a></li>
         <li><a href="{{ site.indicador }}" >Blog</a></li>
