--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,9 @@
         <div class="navbar-collapse collapse navbar-inverse-collapse">
         <ul class="nav navbar-nav">
         </ul> 
-            Colombian Network of High Energy Physics
+            <div style="color:#003893">
+                <font size="26" color=> Colombian Network of High Energy Physics </font>
+            </div>    
         <ul class="nav navbar-nav navbar-right left-syms">
         <li><a href="{{ site.admision }}" ">About</a></li>
         <li><a href="{{ site.indicador }}" >Blog</a></li>
