--- a/_sass/_custom-udea.scss
+++ b/_sass/_custom-udea.scss
@@ -1,4 +1,4 @@
-$navbar-color:     #78B8D3; //#113311; //#B0E0E6;
+$navbar-color:     #0000FF; //#78B8D3; //#113311; //#B0E0E6;
 $category-color:   #003893; //#B0E0E6; //#669900;
 $border-color:   $category-color;//#0079a1;
 $btn-hover-background-color: $navbar-color;
