--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
         <ul class="nav navbar-nav">
         </ul> 
             <div style="color:#003893"; "font-size: 22px";"font-weight: bold">
-                Colombian Network of High Energy Physics 
+                <font size="12"> Colombian Network of High Energy Physics </font>
             </div>    
         <ul class="nav navbar-nav navbar-right left-syms">
         <li><a href="{{ site.admision }}" ">About</a></li>
