--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,8 +16,8 @@
         <div class="navbar-collapse collapse navbar-inverse-collapse">
         <ul class="nav navbar-nav">
         </ul> 
-            <div style="color:#003893"; "font-size: 22px";"font-weight: bold">
-                <font size="12"> Colombian Network of High Energy Physics </font>
+            <div style="color:#003893"; font-size: 22px; font-weight: bold>
+                <font size="8"> Colombian Network of High Energy Physics </font>
             </div>    
         <ul class="nav navbar-nav navbar-right left-syms">
         <li><a href="{{ site.admision }}" ">About</a></li>
