--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
         <div class="navbar-collapse collapse navbar-inverse-collapse">
         <ul class="nav navbar-nav">
         </ul> 
-            <div style="color:#FFFFFF"; font-size: 12px; font-weight: bold>
+            <div class="nav-title">
                  Colombian Network of High Energy Physics 
             </div>    
         <ul class="nav navbar-nav navbar-right left-syms">
