--- a/css/main.scss
+++ b/css/main.scss
@@ -71,6 +71,12 @@ $on-laptop:        800px;
     width: 100%;
 }
 
+.nav-title{
+	color: #FFFFFF; 
+	font-size: 12px; 
+	font-weight: 300;
+}
+
 .container {
     background: #ececec;
     padding-left: 0px !important;
